<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Signer</string>
    <string name="web_wallet_host" translatable="false">wallet.tonkeeper.com</string>
    <string name="intro_subtitle">The storage place for your keys to sign transactions in Tonkeeper.</string>
    <string name="new_key">Create New Key</string>
    <string name="import_key">Import Existing Key</string>
    <string name="create_password">Create Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="paste">Paste</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="update_signer">Update Signer</string>
    <string name="update_signer_subtitle">New parameters are only supported in the latest version.</string>
    <string name="emulation_qr">Scan the QR code to open the transaction emulation</string>
    <string name="close">Close</string>
    <string name="continue_text">Continue</string>
    <string name="name_your_key">Name your Key</string>
    <string name="name_your_key_subtitle">It will simplify the search for the necessary key in the list of keys.</string>
    <string name="name">Name</string>
    <string name="scan">Scan</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_question">Sign Out of All Wallets?</string>
    <string name="sign_out_subtitle">This will erase keys to all wallets. Make sure you have backed up your secret recovery phrases.</string>
    <string name="authorization_required">Authorization required</string>
    <string name="change_password">Change Password</string>
    <string name="enter_current_password">Enter current Password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="password_changed">Password changed</string>
    <string name="add_key">Add Key</string>
    <string name="settings">Settings</string>
    <string name="wrong_url">Invalid URL</string>

    <string name="key_export_qr_title">Link to another device</string>
    <string name="key_export_qr_subtitle">Open Tonkeeper » Import Existing Wallet » Pair with Signer</string>
    <string name="key_export_tonkeeper">Link to Tonkeeper</string>
    <string name="key_export_tonkeeper_web">Link to Tonkeeper Web</string>
    <string name="open_settings">Open Settings</string>
    <string name="unknown_error">Unknown error</string>
    <string name="camera_permission">Enable access to your camera in order to can scan QR codes</string>

    <string name="add_key_subtitle">Create a new key or add an existing one.</string>
    <string name="password_limit">Minimum 4 characters</string>

    <string name="hex_address">Hex Address</string>
    <string name="recover_phrase">Recovery Phrase</string>
    <string name="delete_key">Delete Key</string>

    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="delete_key_question">Delete Key?</string>
    <string name="delete_key_question_subtitle">This will erase key to the wallet. Make sure you have backed up your secret recovery phrase.</string>
    <string name="sign_transaction">Sign transaction</string>
    <string name="audit_transaction">Audit transaction</string>
    <string name="slide_to_sign">Slide to sign</string>
    <string name="unknown">Unknown</string>
    <string name="emulate">Emulate in browser</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="scan_qr_code_subtitle">From Tonkeeper on the action confirmation page</string>
    <string name="qr_sign_title">Scan the QR code with Tonkeeper</string>
    <string name="qr_sign_subtitle">After scanning, the transaction will be sent to the network.</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="signed_transaction">Signed Transaction</string>
    <string name="support">Support</string>
    <string name="send">Send</string>
    <string name="version">Version %1$s</string>
    <string name="recovery_phrase_subtitle">Write these words with their numbers and store them in a safe place down. Do not enter it into unknown apps.</string>
    <string name="add_key_dialog">Add Key</string>
    <string name="legal">Legal</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="enter_recovery_phrase">Enter Recovery Phrase</string>
    <string name="enter_recovery_phrase_subtitle">When you created this wallet, you got a 24-word recovery phrase. Enter it to restore access to your wallet.</string>

    <string name="import_key_wrong">It\'s safer to create a new key in Signer. Your old key may have been compromised by you previously.</string>

    <string name="notfound_title">No signing key</string>
    <string name="notfound_description">Add the necessary key and try again.</string>
    <string name="ok">OK</string>
</resources>