<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/offsetMedium"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:scaleType="centerInside"
        android:src="@drawable/ic_close_16"
        android:tint="?attr/buttonSecondaryForegroundColor"
        android:backgroundTint="?attr/buttonSecondaryBackgroundColor"
        android:background="@drawable/bg_oval_button_secondary"/>

    <uikit.widget.TextHeaderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/add_key_dialog"
        android:description="@string/add_key_subtitle"
        android:layout_marginHorizontal="@dimen/offsetLarge"/>

    <Button
        style="@style/Widget.App.Button"
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offsetLarge"
        android:textAppearance="@style/TextAppearance.Label1"
        android:text="@string/new_key"/>

    <Button
        style="@style/Widget.App.Button.Secondary"
        android:id="@+id/imprt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offsetMedium"
        android:textAppearance="@style/TextAppearance.Label1"
        android:text="@string/import_key"/>

</androidx.appcompat.widget.LinearLayoutCompat>