<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/bg_intro"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/intro_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/offsetLarge">

        <uikit.widget.TextHeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/offsetMedium"
            android:title="@string/app_name"
            android:description="@string/intro_subtitle"/>

        <Button
            style="@style/Widget.App.Button"
            android:id="@+id/new_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetLarge"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/new_key"/>

        <Button
            style="@style/Widget.App.Button.Secondary"
            android:id="@+id/import_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/import_key"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>