<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/offsetMedium"
    android:layout_marginBottom="@dimen/offsetLarge"
    android:layout_marginTop="@dimen/offsetMedium">

    <uikit.widget.ButtonsLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <uikit.widget.IconButtonView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_qr_viewfinder_thin_28"
            android:title="@string/scan"/>

        <uikit.widget.IconButtonView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_plus_outline_28"
            android:title="@string/add_key"/>

        <uikit.widget.IconButtonView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_gear_outline_28"
            android:title="@string/settings"/>

    </uikit.widget.ButtonsLayout>
</FrameLayout>