<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offsetLarge"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_your_key"
            android:textAppearance="@style/TextAppearance.H2"
            android:textColor="@color/textPrimary"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetExtraSmall"
            android:text="@string/name_your_key_subtitle"
            android:textAppearance="@style/TextAppearance.Body1"
            android:textColor="@color/textSecondary"
            android:gravity="center"/>

        <uikit.widget.InputView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="@dimen/offsetLarge"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/offsetLarge">

        <Button
            style="@style/Widget.App.Button"
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/continue_text"/>

        <uikit.widget.LoaderView
            android:id="@+id/loader"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>