<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <uikit.widget.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/settings"
        android:icon="@drawable/ic_chevron_left_16"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/offsetMedium">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <uikit.widget.item.ItemIconView
                android:id="@+id/change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_lock_28"
                android:text="@string/change_password"
                app:position="single"/>

            <uikit.widget.item.ItemIconView
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offsetLarge"
                android:icon="@drawable/ic_message_bubble_28"
                android:text="@string/support"
                android:tint="?attr/iconSecondaryColor"
                app:position="first"/>

            <uikit.widget.item.ItemIconView
                android:id="@+id/legal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_doc_28"
                android:text="@string/legal"
                android:tint="?attr/iconSecondaryColor"
                app:position="last"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/offsetLarge"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="?attr/textPrimaryColor"
                    android:fontFamily="@font/montserrat_semi_bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/offsetExtraExtraSmall"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="?attr/textSecondaryColor"
                    android:fontFamily="@font/montserrat_medium"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>