<?xml version="1.0" encoding="utf-8"?>
<uikit.widget.ColumnLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools">

    <uikit.widget.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ignoreSystemOffset="true"
        android:action="@drawable/ic_close_16"/>

    <uikit.widget.ColumnLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/offsetLarge"
        android:paddingHorizontal="@dimen/offsetMedium">

        <FrameLayout
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"/>
            
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end|bottom"
                android:background="@drawable/bg_oval"
                android:scaleType="centerInside"
                android:backgroundTint="?attr/accentBlueColor"
                android:src="@drawable/ic_arrow_down_28"/>

        </FrameLayout>

        <uikit.widget.TextHeaderView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:title="@string/update_signer"
            android:description="@string/update_signer_subtitle"/>

        <Button
            style="@style/Widget.App.Button"
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetLarge"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/update"/>

        <Button
            style="@style/Widget.App.Button.Secondary"
            android:id="@+id/later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offsetMedium"
            android:textAppearance="@style/TextAppearance.Label1"
            android:text="@string/later"/>

    </uikit.widget.ColumnLayout>

</uikit.widget.ColumnLayout>